# rastro-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: codex.mcp.json
rastro_mcp/: README.md  __init__.py  __main__.py  cli.py  server.py
rastro_mcp/client/: api_client.py  auth.py
rastro_mcp/execution/: bundle_validate.py  diff_compute.py  path_safety.py  snapshot_pull.py  stage_dataset.py
rastro_mcp/models/: contracts.py
rastro_mcp/prompts/: master_prompt.md
rastro_mcp/tools/: catalog_tools.py  execution_tools.py  service_tools.py  viewer_tools.py
rastro_mcp/viewer/: image_review_template.html  review_template.html  viewer_app.js
