[project]
name = "rastro.ai"
version = "0.2.0"
description = "MCP server for Rastro catalog operations — 26 tools for schema, items, activities, snapshots, AI mapping, judging, and image editing"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{name = "Rastro", email = "support@rastro.ai"}]
license = {text = "MIT"}
keywords = ["mcp", "catalog", "rastro", "ai", "enrichment"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "httpx>=0.26.0",
  "pydantic>=2.5.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
]

[project.scripts]
rastro-mcp = "rastro_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Rastro-AI/rastro-mcp"
Documentation = "https://docs.rastro.ai/mcp/quickstart"
Issues = "https://github.com/Rastro-AI/rastro-mcp/issues"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rastro_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"rastro_mcp/prompts/master_prompt.md" = "rastro_mcp/prompts/master_prompt.md"

[tool.hatch.build.targets.sdist]
include = [
  "rastro_mcp/**",
  "README.md",
  "LICENSE",
  "examples/*.json",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]
